// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`collapse-print-width.js - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Objects whose content has forced breaks should NOT collapse even with
// objectWrap: collapse, because the object cannot truly fit on one line.

// Property value forces a multi-line break (args too long to fit on one line).
const a = [
  {
    $push: includeFields.reduce(
      (acc, field) => ({ ...acc, [field]: field }),
      {},
    ),
  },
];

// Short simple objects that fit on one line should still collapse.
const b = [
  {
    $set: { [groupByField]: "$_id" },
  },
  {
    $unset: "_id",
  },
];

// Nested object whose collapsed form would exceed print width.
const c = [
  {
    $group: {
      _id: groupByField,
      opinions: {
        $push: includeFields.reduce(
          (acc, field) => ({ ...acc, [field]: field }),
          {},
        ),
      },
    },
  },
];

=====================================output=====================================
// Objects whose content has forced breaks should NOT collapse even with
// objectWrap: collapse, because the object cannot truly fit on one line.

// Property value forces a multi-line break (args too long to fit on one line).
const a = [
  {
    $push: includeFields.reduce(
      (acc, field) => ({ ...acc, [field]: field }),
      {},
    ),
  },
];

// Short simple objects that fit on one line should still collapse.
const b = [{ $set: { [groupByField]: "$_id" } }, { $unset: "_id" }];

// Nested object whose collapsed form would exceed print width.
const c = [
  {
    $group: {
      _id: groupByField,
      opinions: {
        $push: includeFields.reduce(
          (acc, field) => ({ ...acc, [field]: field }),
          {},
        ),
      },
    },
  },
];

================================================================================
`;

exports[`collapse-print-width.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Objects whose content has forced breaks should NOT collapse even with
// objectWrap: collapse, because the object cannot truly fit on one line.

// Property value forces a multi-line break (args too long to fit on one line).
const a = [
  {
    $push: includeFields.reduce(
      (acc, field) => ({ ...acc, [field]: field }),
      {},
    ),
  },
];

// Short simple objects that fit on one line should still collapse.
const b = [
  {
    $set: { [groupByField]: "$_id" },
  },
  {
    $unset: "_id",
  },
];

// Nested object whose collapsed form would exceed print width.
const c = [
  {
    $group: {
      _id: groupByField,
      opinions: {
        $push: includeFields.reduce(
          (acc, field) => ({ ...acc, [field]: field }),
          {},
        ),
      },
    },
  },
];

=====================================output=====================================
// Objects whose content has forced breaks should NOT collapse even with
// objectWrap: collapse, because the object cannot truly fit on one line.

// Property value forces a multi-line break (args too long to fit on one line).
const a = [
  {
    $push: includeFields.reduce(
      (acc, field) => ({ ...acc, [field]: field }),
      {},
    ),
  },
];

// Short simple objects that fit on one line should still collapse.
const b = [
  {
    $set: { [groupByField]: "$_id" },
  },
  {
    $unset: "_id",
  },
];

// Nested object whose collapsed form would exceed print width.
const c = [
  {
    $group: {
      _id: groupByField,
      opinions: {
        $push: includeFields.reduce(
          (acc, field) => ({ ...acc, [field]: field }),
          {},
        ),
      },
    },
  },
];

================================================================================
`;

exports[`multiline.js - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const a = {
  name1: 'value1',
  name2: 'value2',
};

const b = { name1: 'value1',
  name2: 'value2',
};

const c = {
  name1: 'value1', name2: 'value2',
};

const d = {
  name1: 'value1', name2: 'value2', };

const e = { name1: 'value1', name2: 'value2', };

=====================================output=====================================
const a = { name1: "value1", name2: "value2" };

const b = { name1: "value1", name2: "value2" };

const c = { name1: "value1", name2: "value2" };

const d = { name1: "value1", name2: "value2" };

const e = { name1: "value1", name2: "value2" };

================================================================================
`;

exports[`multiline.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const a = {
  name1: 'value1',
  name2: 'value2',
};

const b = { name1: 'value1',
  name2: 'value2',
};

const c = {
  name1: 'value1', name2: 'value2',
};

const d = {
  name1: 'value1', name2: 'value2', };

const e = { name1: 'value1', name2: 'value2', };

=====================================output=====================================
const a = {
  name1: "value1",
  name2: "value2",
};

const b = { name1: "value1", name2: "value2" };

const c = {
  name1: "value1",
  name2: "value2",
};

const d = {
  name1: "value1",
  name2: "value2",
};

const e = { name1: "value1", name2: "value2" };

================================================================================
`;
